crates/compiler/semantic/tests/snapshots/diagnostics__control_flow::break_continue::test_multiple_break_continue_errors.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: control_flow::break_continue::test_multiple_break_continue_errors"
---
Fixture: semantic_tests::control_flow::break_continue::test_multiple_break_continue_errors
============================================================
Source code:

        fn test() {
            break;
            if (true) {
                continue;
            }
            {
                break;
            }
            return;
        }
        
============================================================
Found 3 diagnostic(s):

--- Diagnostic 1 ---
[3003] Error: Break statement outside of loop
   ╭─[ semantic_tests::control_flow::break_continue::test_multiple_break_continue_errors:3:13 ]
   │
 3 │             break;
   │             ───┬──  
   │                ╰──── Break statement outside of loop
───╯

--- Diagnostic 2 ---
[3004] Error: Continue statement outside of loop
   ╭─[ semantic_tests::control_flow::break_continue::test_multiple_break_continue_errors:5:17 ]
   │
 5 │                 continue;
   │                 ────┬────  
   │                     ╰────── Continue statement outside of loop
───╯

--- Diagnostic 3 ---
[3003] Error: Break statement outside of loop
   ╭─[ semantic_tests::control_flow::break_continue::test_multiple_break_continue_errors:8:17 ]
   │
 8 │                 break;
   │                 ───┬──  
   │                    ╰──── Break statement outside of loop
───╯
