crates/compiler/semantic/tests/snapshots/diagnostics__control_flow::control_flow_paths::test_not_all_paths_return.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: control_flow::control_flow_paths::test_not_all_paths_return"
---
Fixture: semantic_tests::control_flow::control_flow_paths::test_not_all_paths_return
============================================================
Source code:

        fn test(x: felt) -> felt {
            if (x == 0) {
                return 1;
            }
            // Missing return for else case
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::control_flow::control_flow_paths::test_not_all_paths_return:2:12 ]
   │
 2 │         fn test(x: felt) -> felt {
   │            ──┬─  
   │              ╰─── Function 'test' doesn't return on all paths
───╯
