crates/compiler/semantic/tests/snapshots/diagnostics__control_flow::loop_type_checking::test_while_loop_with_complex_non_felt_expression.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: control_flow::loop_type_checking::test_while_loop_with_complex_non_felt_expression"
---
Fixture: semantic_tests::control_flow::loop_type_checking::test_while_loop_with_complex_non_felt_expression
============================================================
Source code:

        struct Config {
            enabled: felt,
        }

        fn test() {
            let config: Config = Config { enabled: 1 };
            // This should fail - accessing the struct itself, not the field
            while (config) {
                return;
            }
        }
        
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[2001] Error: While loop condition must be of type felt, found 'Config'
   ╭─[ semantic_tests::control_flow::loop_type_checking::test_while_loop_with_complex_non_felt_expression:9:20 ]
   │
 9 │             while (config) {
   │                    ───┬──  
   │                       ╰──── While loop condition must be of type felt, found 'Config'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::control_flow::loop_type_checking::test_while_loop_with_complex_non_felt_expression:6:12 ]
   │
 6 │         fn test() {
   │            ──┬─  
   │              ╰─── Function 'test' doesn't return on all paths
───╯
