crates/compiler/semantic/tests/snapshots/diagnostics__control_flow::loop_type_checking::test_while_loop_with_felt_condition.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: control_flow::loop_type_checking::test_while_loop_with_felt_condition"
---
Fixture: semantic_tests::control_flow::loop_type_checking::test_while_loop_with_felt_condition
============================================================
Source code:

        fn test() {
            let x: felt = 1;
            while (x) {
                return;
            }
            return;
        }
        
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[2001] Error: While loop condition must be of type 'bool', found 'felt'
   ╭─[ semantic_tests::control_flow::loop_type_checking::test_while_loop_with_felt_condition:4:20 ]
   │
 4 │             while (x) {
   │                    ┬  
   │                    ╰── While loop condition must be of type 'bool', found 'felt'
───╯
