crates/compiler/semantic/tests/snapshots/diagnostics__control_flow::loop_type_checking::test_while_loop_with_function_returning_non_felt.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: control_flow::loop_type_checking::test_while_loop_with_function_returning_non_felt"
---
Fixture: semantic_tests::control_flow::loop_type_checking::test_while_loop_with_function_returning_non_felt
============================================================
Source code:

        struct Data {
            value: felt,
        }
        
        func get_data() -> Data {
            return Data { value: 42 };
        }
        
        func test() {
            while (get_data()) {
                return;
            }
        }
        
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[2001] Error: While loop condition must be of type felt, found 'Data'
    ╭─[ semantic_tests::control_flow::loop_type_checking::test_while_loop_with_function_returning_non_felt:11:20 ]
    │
 11 │             while (get_data()) {
    │                    ─────┬────  
    │                         ╰────── While loop condition must be of type felt, found 'Data'
────╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
    ╭─[ semantic_tests::control_flow::loop_type_checking::test_while_loop_with_function_returning_non_felt:10:14 ]
    │
 10 │         func test() {
    │              ──┬─  
    │                ╰─── Function 'test' doesn't return on all paths
────╯
